--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <h1>Debate Club - 2D Versus 3D in Games</h1>
     <header>
-        <img src="img/logo.svg" alt="Main Logo" width="150" height="100">
+        <img src="images/logo.png" alt="Fanshawe Logo">
         <nav>
             <h2 class="hidden">Top Navigation</h2>
             <ul>
@@ -24,15 +24,19 @@
 
     <hr>
     <!-- Hero banner  -->
-    <section>
-        <h2 class="hidden">2D</h2>
+    <section id="2d">
+        <h2>2D</h2>
+
+
         <img src="img/main.jpg" alt="Hero Image" width="500" height="300">
     </section>
 
 	<hr>
     <!-- Gallery  -->
-    <section id="2d">
+    <section id="3d">
         <h2>3D</h2>
+
+
         <img src="img/product1.jpg" alt="Product 1" width="200" height="200">
 
     </section>
