Updated why 3d gmes  its better
Updated why 3d games are better than 2d

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link href="css/main.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 <body>
-    <!-- Creating sections using div -->
     <!-- Header -->
     <h1>Debate Club - 2D Versus 3D in Games</h1>
     <header>
@@ -15,15 +14,15 @@
             <h2 class="hidden">Top Navigation</h2>
             <ul>
                 <li> <a href="index.html">Home</a></li>
-                <li> <a href="products.html">2D</a></li>
-                <li> <a href="contact.html">3D</a></li>
-                <li> <a href="blog.html">Conclusion</a></li>
+                <li> <a href="#2d">2D</a></li>
+                <li> <a href="#3d">3D</a></li>
+                <li> <a href="#debateconclusion">Conclusion</a></li>
             </ul>
         </nav>
     </header>
 
     <hr>
-    <!-- Hero banner  -->
+    <!-- Why Choose 2d Games  -->
     <section id="2d">
         <h2>2D</h2>
 
@@ -32,18 +31,24 @@
     </section>
 
 	<hr>
-    <!-- Gallery  -->
+    <!-- Why Choose 3d Games  -->
     <section id="3d">
         <h2>3D</h2>
 
+        <p>3D Models give us an amazing experience, combining HQ 3d models with
+            along with an incredible graphic experience, they are way better than the 2D ones.</p>
 
-        <img src="img/product1.jpg" alt="Product 1" width="200" height="200">
+        <p>The end-user experience is powerful while playing 3d games, the final user is able to 
+        experience in details scenery that can easily be compared to real life, guns, cars, nature even people 
+        can have a high-fidelity representation of this type of game. </p>
+       </section>
 
-    </section>
+        <img src="images/3dgame.jpg" alt="3d Game" >
+
 
     <hr>
-    <!-- Gallery  -->
-    <section id="3d">
+    <!-- Conclusion  -->
+    <section id="debateconclusion">
         <h2>Conclusion</h2>
         <img src="img/product1.jpg" alt="Product 1" width="200" height="200">
 
@@ -55,9 +60,9 @@
         <h3>Footer</h3>
         <ul>
             <li> <a href="index.html">Home</a></li>
-            <li> <a href="products.html">Products</a></li>
-            <li> <a href="contact.html">Contact</a></li>
-            <li> <a href="blog.html">Blog</a></li>
+            <li> <a href="#2d">2D</a></li>
+            <li> <a href="#3d">3D</a></li>
+            <li> <a href="#debateconclusion">Conclusion</a></li>
         </ul>
     </footer>
 </body>
