--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
     <!-- Conclusion  -->
     <section id="debateconclusion">
         <h2>Conclusion</h2>
-        <img src="img/product1.jpg" alt="Product 1" width="200" height="200">
+        <p>However, there is a consensus between both game types, they both are projected to make people
+             have hours of fun, there is no complaints that 3d models offer better graphics quality 
+             actually, although this does not mean that 2d games don't have their gems too, it's 
+             possible to see there are many titles that have been there for years and still receive a
+              big love from their community players.</p>
+        <img src="images/dk_goodtimes.jpg" alt="Donkey Kong Game">
 
     </section>
 
     <hr>
     <!-- Footer  -->
     <footer>
-        <h3>Footer</h3>
+        <h3 class="hidden">Footer</h3>
         <ul>
             <li> <a href="index.html">Home</a></li>
             <li> <a href="#2d">2D</a></li>
